Fix alignment of text

--- a/Code/UI/PlayerCount.scss
+++ b/Code/UI/PlayerCount.scss
@@ -8,7 +8,6 @@ PlayerCount {
     width: 250px;
     height: 80px;
     border-radius: 40px;
-    // transform: translate(-50%, 0);
     background-color: gray;
     background-image: linear-gradient(65deg, #d66f34 50%, #2d7233 50%);
     background-size: 270px 100px;
@@ -24,6 +23,7 @@ PlayerCount {
       font-family: OpenSans;
       font-weight: 700;
       text-align: center;
+      margin-top: 6px;
     }
   }
 }
