--- a/Code/UI/Timer.scss
+++ b/Code/UI/Timer.scss
@@ -10,22 +10,21 @@ Timer {
 
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
   .Time {
-    margin: 15px 15px 2px;
     color: white;
     font-size: 35px;
-    height: 35px;
     font-family: OpenSans;
     font-weight: 700;
+    margin-top: -5px;
   }
 
   .Status {
-    margin: 2px 15px 15px;
     color: white;
     font-size: 25px;
-    height: 25px;
     font-family: OpenSans;
     font-weight: 400;
+    margin-top: -10px;
   }
 }
